10 contrast fixed

--- a/css/dr4uaccessible.css
+++ b/css/dr4uaccessible.css
@@ -37,3 +37,8 @@ body .page-wrapper .page-footer .footer-copyright-wrapper {
     background-color: #ffffff !important;
 }
 
+.elementor-1750 .elementor-element.elementor-element-58216e37.elementor-widget-heading .elementor-heading-title {
+    color: #000000;
+    background-color: #ffffff !important;
+}
+
